[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-lib"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A FastAPI CRUD library with dependency injection"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]
dependencies = [
    "anyio==4.9.0",
    "fastapi==0.115.14",
    "greenlet==3.2.3",
    "idna==3.10",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pydantic_core==2.33.2",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.41",
    "starlette==0.46.2",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0",
    "PyJWT==2.10.1",
    "python-dotenv==1.1.1"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/api-lib"
"Bug Reports" = "https://github.com/yourusername/api-lib/issues"
"Source" = "https://github.com/yourusername/api-lib"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["src"] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*", "venv*"]  # exclude packages matching these glob patterns

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]